# Goldhorn_Air

./: .gitignore  BTFL_cli_20260126_153309_JHEF405PRO.txt  Cargo.toml  flash_monitor.sh  llm.txt
.cargo/: config.toml
src/: board.rs  main.rs  state.rs  usb.rs
src/drivers/: ahrs.rs  crsf.rs  dshot.rs  ekf.rs  filter.rs  flash.rs  gps.rs  hmc5883.rs  icm42688.rs  kalman.rs  mod.rs  roll.rs  spl06.rs
src/tasks/: baro_task.rs  crsf_task.rs  fast_loop.rs  gps_task.rs  mod.rs  telemetry_task.rs
