[package]
name = "flight-controller-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flight-controller-rust"
test = false
bench = false

[dependencies]
embassy-stm32 = { version = "0.1", features = ["stm32f405rg", "unstable-pac", "memory-x", "time-driver-any", "exti"] }
embassy-executor = { version = "0.5", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = "0.3"
embassy-usb = "0.2"
embassy-futures = "0.1"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
heapless = "0.9.2"
static_cell = "2.1.1"
micromath = "2.1.0"
